# glBenchy

./: .gitignore  CMakeCache.txt  CMakeLists.txt  glBenchy.js  index.html
assets/material/: default.mat  shadertoy.mat  unlit_cube.mat
assets/model/environment/factory/: arm.fbx
assets/model/environment/factory/material/: belt.mat  ceiling.mat  floor.mat  metalbase.mat  walls.mat
assets/shader/: default.fs  wanderingstars.fs  wanderingstars.vs
assets/shader/screen/: screen.fs
assets/shader/skybox/: default.fs
assets/texture/: normal.png~
docs/: index.html
include/: application.h
include/glad/: glad.h
pages/: details.html
src/: CMakeLists.txt  glBenchy.cpp  glad.c
src/Common/: glBenchy.cpp
src/Unix/: startup.cpp
src/Win32/: CMakeLists.txt  startup.cpp
src/components/: component.cpp  component.h
src/components/MeshRenderer/: MeshRenderer.h
src/components/arm_controller/: arm_target_mover.cpp  arm_target_mover.h  armcontroller.cpp  armcontroller.h  armjoint.cpp  armjoint.h
src/components/camera/: camera.cpp  camera.h
src/components/light/: light.cpp  light.h
src/components/mesh_renderer/: mesh_renderer.cpp  mesh_renderer.h
src/core/debug/: debug.cpp  debug.h
src/core/material/: material.cpp  material.h
src/core/mesh/: mesh.cpp  mesh.h
src/core/object/: object.cpp  object.h
src/core/performance_monitor/: performance_monitor.cpp  performance_monitor.h
src/core/resource/: resource_manager.cpp  resource_manager.h
src/core/scene/: scene.cpp  scene.h  scene_manager.cpp  scene_manager.h
src/core/scene_object/: scene_object.cpp  scene_object.h
src/core/shader/: shader.cpp  shader.h
src/core/texture/: texture.cpp  texture.h
src/core/transform/: transform.cpp  transform.h
src/editor/: editor.cpp  editor.h
src/glbenchy/: objloader.cpp  objloader.h
src/global/: glbtime.h  globals.cpp  globals.h  instanceof.h  sharedglobals.cpp  uuid.h
src/handmademath/: math.h
src/imgui/: imgui_impl_glfw.cpp  imgui_styles.cpp  imgui_styles.h
src/object/: object.cpp  object.h
src/platform/: platform.cpp  platform.h
src/resources/shaders/: castle_shadertoy.fs
src/scene/: scene.cpp  scene.h
src/transform/: transform.cpp  transform.h
